..F....... [ZBX-15833] fixed scrollbar in overlay popups

--- a/frontends/php/assets/styles/blue-theme.css
+++ b/frontends/php/assets/styles/blue-theme.css
@@ -2705,7 +2705,14 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
       width: 100%;
       max-height: calc(100vh - 190px);
       max-width: inherit;
-      margin: 0 0 10px 0; }
+      margin: 0 -10px 10px -10px;
+      padding: 0 10px; }
+      .overlay-dialogue.modal .overlay-dialogue-body .table-forms .table-forms-td-right {
+        padding-right: 8px; }
+      .overlay-dialogue.modal .overlay-dialogue-body .columns-wrapper {
+        flex-wrap: nowrap; }
+        .overlay-dialogue.modal .overlay-dialogue-body .columns-wrapper .column-50:last-of-type {
+          margin-left: 10px; }
     .overlay-dialogue.modal .overlay-dialogue-controls {
       text-align: right;
       padding: 0px 0px 10px 0px; }
